# subsai

./: 404.html  README.md  index.html  pyproject.toml  requirements.txt
examples/: batch-search-and-process-srt.bash
src/subsai/: __init__.py  cli.py  configs.py  main.py  utils.py
src/subsai/models/: faster_whisper_model.py  whisperX_model.py  whisper_api_model.py  whisper_model.py  whisper_timestamped_model.py  whispercpp_model.py
