[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "subsai"
version = "1.6.2"
authors = [
    {name = "absadiki"},
]
description = "Subtitles generation tool powered by OpenAI's Whisper and its variants"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["subtitles", "openai", "whisper"]
license = {text = "LICENSE"}

dependencies = [
    "pysubs2~=1.6.0",
    "ffmpeg-python>=0.2.0",
    "ffsubsync~=0.4.24",
    "dl-translate==0.3.0",
    "tqdm",
    "numpy<2",
]

[project.optional-dependencies]
whisper = [
    "openai-whisper==20240930",
    "torch==2.2.0",
    "torchaudio==2.2.0",
]
faster-whisper = [
    "faster-whisper",
    "openai-whisper==20240930",
    "torch==2.2.0",
    "torchaudio==2.2.0",
]
stable-ts = [
    "stable-ts==2.18.2",
    "faster-whisper",
    "openai-whisper==20240930",
    "torch==2.2.0",
    "torchaudio==2.2.0",
]
whisperx = [
    "whisperx @ git+https://github.com/m-bain/whisperx.git@8c58c54635cd6ee2d9d8665a3cf789863f6ed700",
    "openai-whisper==20240930",
    "torch==2.2.0",
    "torchaudio==2.2.0",
]
timestamped = [
    "whisper-timestamped @ git+https://github.com/linto-ai/whisper-timestamped",
    "openai-whisper==20240930",
    "torch==2.2.0",
    "torchaudio==2.2.0",
]
whisper-cpp = [
    "pywhispercpp==1.3.1",
]
transformers = [
    "transformers==4.48.1",
    "torch==2.2.0",
]
api = [
    "openai==1.60.1",
    "pydub==0.25.1",
    "joblib>=1.5.2",
]
webui = [
    "pandas==1.5.3",
    "streamlit~=1.20.0",
    "streamlit-player~=0.1.5",
    "streamlit-aggrid~=0.3.4",
]
all = [
    "subsai[whisper,faster-whisper,stable-ts,whisperx,timestamped,whisper-cpp,transformers,api,webui]",
]

[project.urls]
"Homepage" = "https://github.com/absadiki/subsai"
"Bug Tracker" = "https://github.com/absadiki/subsai/issues"


[project.scripts]
subsai = 'subsai.cli:main'
subsai-webui = 'subsai.webui:run'
